SET(CMAKE_VERBOSE_MAKEFILE TRUE)


SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_THREAD_SUPPORT")

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeScripts/)



SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt4 REQUIRED)


INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../SystemFile
  ${CMAKE_CURRENT_SOURCE_DIR}/../Helper
  ${QT_INCLUDE_DIR})



SET(libSrc
  ClsSysFileParser.cpp)
  #ClsMyErrorHandler.cpp )

ADD_LIBRARY(SysFileParser STATIC ${libSrc})
TARGET_LINK_LIBRARIES(SysFileParser ${QT_LIBRARIES})

#INSTALL(TARGETS SysFileParser
# ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../lib/
#)


